fix spacing according to designs

--- a/style.css
+++ b/style.css
@@ -96,17 +96,17 @@ body {
   text-align: center;
   background: var(--grad-bg);
   color: hsl(var(--clr-lavender));
-  padding: 1.33em 3em 2.22em;
+  padding: 1.333em 2.222em 2.222em;
   border-radius: 0 0 1.78em 1.78em;
 }
 
 .result-summary-card__result-score {
-  width: 7.78em;
+  width: 9.333em;
   aspect-ratio: 1;
   font-size: 0.9375rem;
   background: var(--grad-circle);
   color: hsla(var(--clr-lavender) / 0.8);
-  margin: 1.34em auto;
+  margin: 1.667em auto;
   border-radius: 50%;
   display: grid;
   align-items: center;
@@ -123,7 +123,7 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
   color: hsl(var(--clr-white));
-  margin-bottom: 0.333em;
+  margin-bottom: 0.148em;
 }
 
 .result-summary-card__result-info-desc {
@@ -134,7 +134,7 @@ body {
 /* SUMMARY SECTION */
 
 .result-summary-card__summary {
-  padding: 1.33em;
+  padding: 1.333em 1.778em 1.667em;
 }
 
 @media screen and (min-width: 40em) {
@@ -194,6 +194,6 @@ body {
   /* SUMMARY SECTION */
 
   .result-summary-card__summary {
-    padding: 2.22em;
+    padding: 2.222em 2.222em 2.556em;
   }
 }
